# cmake-helloworld

./: CMakeLists.txt  README.md  main.cpp  sqrt.cpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/sqrt/: CMakeLists.txt  sqrt.h
