cmake_minimum_required(VERSION 2.8)
project(helloworld)
set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
add_subdirectory(./glfw-3.3.2)
find_package(OpenGL REQUIRED)
include_directories( ${OPENGL_INCLUDE_DIRS} )
add_library(sqrt sqrt.cpp)
add_executable(helloworld main.cpp)
target_link_libraries(helloworld OpenGL::GL glfw sqrt)
