cmake_minimum_required(VERSION 2.8)
project(helloworld)
set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
add_subdirectory(lib/glfw-3.3.2)
add_subdirectory(lib/glm)
find_package(OpenGL REQUIRED)
add_library(glad lib/glad/src/glad.c)
include_directories(lib/glad/include)
add_library(sqrt sqrt.cpp)

add_executable(helloworld main.cpp)
target_link_libraries(helloworld OpenGL::GL glad glfw glm sqrt)
